--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,3 +1,6 @@
+*{
+	margin: 0;
+}
 #movie-result-container {
 	img {
 		width:150px;
@@ -16,3 +19,32 @@
 #signout-error {
 	color: red;
 }
+#favsList {
+	border: 5px solid black;
+	background-color: gray;
+	padding: 20px;
+	top: 10px;
+	right: 10px;
+	position: fixed;
+}
+/*header*/
+header {
+	background-color: black;
+	color: white;
+	padding: 50px 50px 0 50px;
+	font-family: 'Ubuntu', sans-serif;
+	position: static;
+}
+header h1 {
+	font-family: 'Lobster', serif;
+	font-size: 50px;
+}
+/*movie-search*/
+#movie-search {
+	background-color: black;
+	color: white;
+	padding: 15px 50px 50px 50px;
+	font-family: 'Ubuntu', sans-serif;
+	position: static;
+}
+
