--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -20,17 +20,20 @@
 	color: red;
 }
 #favsList {
-	border: 5px solid black;
-	background-color: gray;
+	border: 3px solid black;
+	background-color: #e8f0e8;
 	padding: 20px;
 	top: 10px;
 	right: 10px;
 	position: fixed;
+	border-radius: 25px;
+	box-shadow: 1px 1px 1px cyan;
+
 }
 /*header*/
 header {
 	background-color: black;
-	color: white;
+	color: #e8f0e8;
 	padding: 50px 50px 0 50px;
 	font-family: 'Ubuntu', sans-serif;
 	position: static;
@@ -42,9 +45,29 @@ header h1 {
 /*movie-search*/
 #movie-search {
 	background-color: black;
-	color: white;
+	color: #e8f0e8;
 	padding: 15px 50px 50px 50px;
 	font-family: 'Ubuntu', sans-serif;
 	position: static;
 }
 
+button {
+border-radius: 25px;
+box-shadow: 1px 1px 1px cyan;
+// border: red 1px solid;
+}
+
+input{ 
+	border-radius: 25px;
+	box-shadow: 1px 1px 1px cyan;
+	// color: #e8f0e8;
+}
+
+#movie-rating{
+	border-radius: 25px;
+	box-shadow: 1px 1px 1px cyan;
+}
+
+#movieContainer {
+	color: black;
+}
