color fix body/footer

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -4,8 +4,8 @@
 #movie-result-container {
 	img {
 		width:150px;
-		height: auto;
-	}
+		height: auto;	}
+	background-color: black;
 }
 
 .hide {
@@ -70,4 +70,15 @@ input{
 
 #movieContainer {
 	color: black;
+}
+
+main{
+	div{
+		// border-bottom: cyan 1px dotted;
+	}
+}
+
+body{
+	background-color: black;
+	height: fit-content;	
 }
