made favorites window responsive @800px

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -82,3 +82,10 @@ body{
 	background-color: black;
 	height: fit-content;	
 }
+
+@media (max-width: 800px){
+	#favsList{
+		position: relative;
+		max-width: 200px;
+margin-left: 50px;	}
+}
