--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,5 +1,6 @@
 *{
 	margin: 0;
+	font-family: 'Ubuntu', sans-serif;
 }
 #movie-result-container {
 	img {
@@ -41,6 +42,7 @@ header {
 header h1 {
 	font-family: 'Lobster', serif;
 	font-size: 50px;
+	color: #ffffff;
 }
 /*movie-search*/
 #movie-search {
@@ -70,4 +72,10 @@ input{
 
 #movieContainer {
 	color: black;
+}
+/*pageTitle*/
+#pageTitle {
+	height:180px;
+	background-image: url("/assets/images/popcorn.jpg");
+	background-repeat: no-repeat;
 }
