added to js for hiden text

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -13,10 +13,14 @@
 	color: red;
 }
 
-<<<<<<< HEAD
-#displayError {
-=======
 #signout-error {
->>>>>>> c90749b2cba420910951c179449c895940e4a09c
+	color: red;
+}
+
+#displayError {
+	color: red;
+}
+
+#wrongInput {
 	color: red;
 }
