hopefully the final code

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -6,7 +6,6 @@
 	img {
 		width:150px;
 		height: auto;	}
-	background-color: black;
 }
 
 .hide {
@@ -84,17 +83,16 @@ body{
 	background-color: black;
 	height: fit-content;	
 }
-
-@media (max-width: 800px){
-	#favsList{
-		position: relative;
-		max-width: 200px;
-margin-left: 50px;	}
-=======
-/*pageTitle*/
+/*pagetitle*/
 #pageTitle {
 	height:180px;
 	background-image: url("/assets/images/popcorn.jpg");
 	background-repeat: no-repeat;
 
+}
+@media (max-width: 800px){
+	#favsList{
+		position: relative;
+		max-width: 200px;
+		margin-left: 50px;	}
 }
